--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -106,8 +106,13 @@
   cursor: pointer;
   transition: background-color 0.2;
 }
-.commentForm button:hover {
+.commentForm button:not(:disabled):hover {
   background: var(--green-300);
+}
+
+.commentForm button:disabled {
+  opacity: 0.7;
+  cursor: not-allowed;
 }
 
 .commentList {
